fix: dark mode footer

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #171717 !important;
+    background-color: #FFF !important;
 }
 html {
     filter: invert(100%) hue-rotate(180deg) brightness(105%) contrast(85%);
